thrasyboulos/ge/base/delphi/cnp-alexandros.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vault-access-alexandros
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: alexandros
            io.kubernetes.pod.namespace: makedonia
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
