thrasyboulos/ge/base/delphi/cnp-anaximenes.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vault-access-anaximenes
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: anaximenes
            io.kubernetes.pod.namespace: attike
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
