thrasyboulos/ge/base/delphi/cnp-euripides.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vault-access-euripides
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: euripides
            io.kubernetes.pod.namespace: attike
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
