thrasyboulos/ge/base/delphi/cnp-herakleitos.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vault-access-herakleitos
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: herakleitos
            io.kubernetes.pod.namespace: olympia
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
